--- a/src/input.html
+++ b/src/input.html
@@ -2,20 +2,20 @@
 	<head>
 		<title> Student News </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../css/styles.min.css" >
+		<link rel="stylesheet" type="text/css" href="../css/styles.css" >
 		<script src="../js/hammer.min.js"></script>
-		<script src="../js/app.min.js"></script>
+		<script src="../js/app.js"></script>
 	
 	</head>
 	<body>
 		<center>
-			<div id="nav" class="inlineBlock" >	
-				<div class="inlineBlock no-margin">
+			<header id="nav" >	
+				<!--<div class="inlineBlock no-margin">
 					<div id="navBack" class="no-margin"></div>
 					<div id="navIcon" class="no-margin"></div>
 				</div>
-				<div id="navTitle" class="inlineBlock">Student News</div>
-			</div>
+				<div id="navTitle" class="inlineBlock">Student News</div> -->
+			</header>
 		<div id="content"></div>
 		</center>
 	</body>
