--- a/src/input.html
+++ b/src/input.html
@@ -2,9 +2,9 @@
 	<head>
 		<title> Student News </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" type="text/css" href="../css/styles.min.css" >
+		<link rel="stylesheet" type="text/css" href="../css/styles.css" >
 		<script src="../js/hammer.min.js"></script>
-		<script src="../js/app.min.js"></script>
+		<script src="../js/app.js"></script>
 	
 	</head>
 	<body>
